--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
           </ul>
         {% else %}
           <form class="form-inline ml-auto">
-            <a href="{% url 'user:login' %}" class="btn btn-outline-secondary">
+            <a href="{% url 'user:login' %}" class="btn btn-secondary">
             Log In</a>
             <a href="{% url 'user:register' %}" class="btn btn-primary ml-2">
             Sign up</a>
