--- a/templates/user/login.html
+++ b/templates/user/login.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_tags %}
 
 {% block content %}
 
@@ -9,7 +10,7 @@
 
 <form method='POST' action="{% url 'user:login' %}">
 	{% csrf_token %}
-	{{form.as_p}}
+	{{ form|crispy }}
 	<button name="submit">Log in</button>
 	<input type="hidden" name="next" 
 		value="{% url 'job_list' %}"/>
